objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Package / Provisional Request</label>
        <referenceTo>Booking_Package__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP Config</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Last_Updated_Date__c</fullName>
        <label>Original Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content (Parent Account)</relationshipLabel>
        <relationshipName>Content1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Account_Type</fullName>
        <active>true</active>
        <label>Account Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Booking_Package</fullName>
        <active>true</active>
        <label>Booking Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSG_Marketing</fullName>
        <active>true</active>
        <label>DSG Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_config</fullName>
        <active>true</active>
        <label>IP config</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Content</fullName>
        <active>true</active>
        <label>Opportunity Content</label>
    </recordTypes>
</CustomObject>